# relbench

./: .DS_Store.swp  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  benchmark_ratebeer.py  env.yaml  env.yml  inspect_tables.py  inspect_tasks.py  pixi.toml  pyproject.toml  requirements.txt  run_efficiency.sh  setup.py
.github/workflows/: full_testing.yml  main.yml  testing.yml
dataset/ogbl_ddi/: RELEASE_v1.txt
datasets/: product.py
examples/: .baseline.py.swp  baseline.py  baseline_autocomplete.py  baseline_entity.py  baseline_link.py  baseline_node.py  baseline_predict_column.py  baseline_recommendation.py  dec12.sh  dec12.sh~c78bf10beef0f8d50ba396a4c3742fb449505663  efficiency.py  feb24.sh  gnn.py  gnn_autocomplete.py  gnn_entity.py  gnn_link.py  gnn_node.py  gnn_predict_column.py  gnn_recommendation.py  hybrid_entity.py  hybrid_node.py  idgnn_link.py  inferred_stypes.py  informative_cols.py  lightgbm_autocomplete.py  lightgbm_baseline.py  lightgbm_entity.py  lightgbm_gnn_features_node.py  lightgbm_link.py  lightgbm_link_baseline.py  lightgbm_node.py  lightgbm_predict_column.py  link_baseline.py  model.py  multi_gnn_link.py  node2vec_link.py  node_baseline.py  stype.py  sweep_baseline.py  tabarena_plurel16b_inference.md  (+8 more)
examples/amazon/: demo-amazon.ipynb  demo-fashion_5_core.ipynb  pack_demo-fashion_5_core.ipynb
examples/amazon_reviews/: demo-books_5_core.ipynb  demo-fashion.ipynb  demo-fashion_5_core.ipynb  demo.ipynb  pack_demo-fashion_5_core.ipynb
examples/demos/: RelBench - database and task exploration.ipynb
examples/fake/: demo.ipynb  eval.ipynb  new_train.py  train.py
examples/forum/: analysis.ipynb  data_loading.py
examples/grant/: analysis.ipynb  data_loading.py  explore.ipynb  train.py
examples/product/: analysis.ipynb  churn.ipynb  demo.ipynb  train.ipynb  train.py
examples/stack_exchange/: data_loading.py  demo-stack-exchange.ipynb  pack_stack_exchange.ipynb
examples/stackex/: demo-stack-exchange.ipynb  demo-stackex.ipynb  pack_stack_exchange.ipynb
relbench/: __init__.py  metrics.py  registry.py  utils.py
relbench/base/: __init__.py  database.py  dataset.py  table.py  task_autocomplete.py  task_base.py  task_column.py  task_entity.py  task_link.py  task_node.py  task_recommendation.py
relbench/data/: __init__.py  database.py  dataset.py  registry.py  table.py  task.py  task_base.py  task_link.py  task_node.py
relbench/datasets/: __init__.py  amazon.py  amazon_reviews.py  arxiv.py  (+23 more)
relgym/: config.py  loader.py  logger.py  loss.py  optimizer.py  train.py
rtb/: .__init__.py.swp  __init__.py  data.py  metrics.py  nn.py  utils.py
run/: main.py  run_amazon.sh  run_f1.sh  run_f1_xgb.sh  run_single.sh  run_stackex.sh  summarize.py  sweep.py  vis.ipynb  vis_josh.ipynb
scripts/: pack.py
test/: test_metrics.py
tests/: test_utils.py
tutorials/: Custom Datasets and Tasks.ipynb  contrib.ipynb  custom_dataset.ipynb  custom_task.ipynb  load_data.ipynb  make_dataset.ipynb  train_model.ipynb
(+129 files in other folders)
